ARTEMIS-3882 Removing Logger references and its dependencies
Using simple logging with a possibility of a callback
Using javac -h instead of javah
Removing finalize calls, using Java11, Using Cleaner API in some tests that are validating leaks
Incrementing native version to avoid missuse

authored by Clebert Suconic and Robbie Gemmel